--- a/MySampleApp/ListEvents.storyboard
+++ b/MySampleApp/ListEvents.storyboard
@@ -1,7 +1,146 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--List Events View Controller-->
+        <scene sceneID="fbI-yA-yb3">
+            <objects>
+                <viewController storyboardIdentifier="ListEvents" id="18f-qX-QVo" customClass="ListEventsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="utp-eF-nog"/>
+                        <viewControllerLayoutGuide type="bottom" id="if1-cL-fYb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4Wo-UU-NCm">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cIf-2E-Xsy" customClass="JTCalendarMenuView">
+                                <rect key="frame" x="0.0" y="47" width="600" height="50"/>
+                                <color key="backgroundColor" red="0.21176470589999999" green="0.47450980390000003" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Oby-6C-3Om"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Calendar" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g4J-0W-O3V">
+                                <rect key="frame" x="81" y="17" width="416" height="24"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9er-Sq-qVm" customClass="JTHorizontalCalendarView">
+                                <rect key="frame" x="0.0" y="48" width="600" height="85"/>
+                                <color key="backgroundColor" red="0.21176470589999999" green="0.47450980390000003" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="85" id="IiS-Hh-aKu"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nuz-BM-hfK">
+                                <rect key="frame" x="13" y="14" width="17" height="29"/>
+                                <state key="normal" backgroundImage="back.png"/>
+                                <connections>
+                                    <action selector="back:" destination="18f-qX-QVo" eventType="touchUpInside" id="Tko-y4-XSw"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="calenarwhite.png" translatesAutoresizingMaskIntoConstraints="NO" id="dDn-wU-ggD">
+                                <rect key="frame" x="39" y="14" width="29" height="28"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FLq-oq-azz">
+                                <rect key="frame" x="0.0" y="132" width="600" height="455"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="event" id="060-3N-Wla">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="060-3N-Wla" id="D3y-f6-pJO">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="7:30 am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qX8-19-Rdo">
+                                                    <rect key="frame" x="13" y="11" width="63" height="21"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view tag="103" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s5h-hj-dgC">
+                                                    <rect key="frame" x="84" y="0.0" width="516" height="43"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="102" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2p-4d-oFZ">
+                                                            <rect key="frame" x="8" y="11" width="508" height="21"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.91764705879999997" green="0.34901960780000002" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="P2p-4d-oFZ" firstAttribute="leading" secondItem="s5h-hj-dgC" secondAttribute="leading" constant="8" id="PPd-xn-dGm"/>
+                                                        <constraint firstItem="P2p-4d-oFZ" firstAttribute="centerY" secondItem="s5h-hj-dgC" secondAttribute="centerY" id="Ytw-VH-GUT"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="qX8-19-Rdo" firstAttribute="top" secondItem="D3y-f6-pJO" secondAttribute="topMargin" constant="3" id="1P0-aG-2R3"/>
+                                                <constraint firstItem="s5h-hj-dgC" firstAttribute="leading" secondItem="qX8-19-Rdo" secondAttribute="trailing" constant="8" id="2Y7-8O-e4l"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="s5h-hj-dgC" secondAttribute="trailing" constant="-8" id="4Qm-tP-QBq"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="s5h-hj-dgC" secondAttribute="trailing" id="CmO-pS-JBj"/>
+                                                <constraint firstItem="s5h-hj-dgC" firstAttribute="height" secondItem="D3y-f6-pJO" secondAttribute="height" id="F2r-m2-xDF"/>
+                                                <constraint firstItem="s5h-hj-dgC" firstAttribute="height" secondItem="D3y-f6-pJO" secondAttribute="height" id="J9k-b8-RZq"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="s5h-hj-dgC" secondAttribute="trailing" constant="-8" id="MBg-N9-z3K"/>
+                                                <constraint firstItem="qX8-19-Rdo" firstAttribute="centerY" secondItem="D3y-f6-pJO" secondAttribute="centerY" id="OeX-v1-pYN"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="P2p-4d-oFZ" secondAttribute="trailing" constant="-8" id="T7f-Lx-8fm"/>
+                                                <constraint firstItem="s5h-hj-dgC" firstAttribute="leading" secondItem="D3y-f6-pJO" secondAttribute="leadingMargin" constant="76" id="gIQ-6U-Oa6"/>
+                                                <constraint firstItem="s5h-hj-dgC" firstAttribute="centerY" secondItem="D3y-f6-pJO" secondAttribute="centerY" id="iPB-zW-s4L"/>
+                                                <constraint firstItem="qX8-19-Rdo" firstAttribute="leading" secondItem="D3y-f6-pJO" secondAttribute="leadingMargin" constant="5" id="v4u-sx-eX9"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="2Y7-8O-e4l"/>
+                                                    <exclude reference="CmO-pS-JBj"/>
+                                                    <exclude reference="MBg-N9-z3K"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="18f-qX-QVo" id="By0-s1-g20"/>
+                                    <outlet property="delegate" destination="18f-qX-QVo" id="Yko-1t-Aen"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.21176470589999999" green="0.47450980390000003" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="dDn-wU-ggD" firstAttribute="centerY" secondItem="Nuz-BM-hfK" secondAttribute="centerY" id="8tS-Le-7xr"/>
+                            <constraint firstItem="dDn-wU-ggD" firstAttribute="leading" secondItem="Nuz-BM-hfK" secondAttribute="trailing" constant="11" id="GkR-t9-bdd"/>
+                            <constraint firstItem="Nuz-BM-hfK" firstAttribute="leading" secondItem="4Wo-UU-NCm" secondAttribute="leadingMargin" constant="-7" id="Ktz-I3-8GN"/>
+                            <constraint firstItem="g4J-0W-O3V" firstAttribute="width" secondItem="4Wo-UU-NCm" secondAttribute="width" id="MFk-jd-YsX"/>
+                            <constraint firstItem="FLq-oq-azz" firstAttribute="top" secondItem="9er-Sq-qVm" secondAttribute="bottom" constant="-1" id="V1a-Fv-O1C"/>
+                            <constraint firstItem="9er-Sq-qVm" firstAttribute="centerX" secondItem="4Wo-UU-NCm" secondAttribute="centerX" id="bGO-Zq-gdm"/>
+                            <constraint firstItem="9er-Sq-qVm" firstAttribute="width" secondItem="4Wo-UU-NCm" secondAttribute="width" id="bfw-DV-Hbe"/>
+                            <constraint firstItem="Nuz-BM-hfK" firstAttribute="top" secondItem="utp-eF-nog" secondAttribute="bottom" constant="-6" id="cCL-yO-S1B"/>
+                            <constraint firstItem="FLq-oq-azz" firstAttribute="width" secondItem="4Wo-UU-NCm" secondAttribute="width" id="icX-me-wXM"/>
+                            <constraint firstItem="9er-Sq-qVm" firstAttribute="top" secondItem="g4J-0W-O3V" secondAttribute="bottom" constant="7" id="nVT-i8-ki9"/>
+                            <constraint firstItem="g4J-0W-O3V" firstAttribute="centerY" secondItem="dDn-wU-ggD" secondAttribute="centerY" id="qeO-RN-qU4"/>
+                            <constraint firstItem="g4J-0W-O3V" firstAttribute="centerX" secondItem="4Wo-UU-NCm" secondAttribute="centerX" id="yi6-Di-Rce"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="calendarContentView" destination="9er-Sq-qVm" id="slW-e6-Y0G"/>
+                        <outlet property="titulo" destination="g4J-0W-O3V" id="3uf-OG-V2H"/>
+                        <outlet property="view" destination="4Wo-UU-NCm" id="SQZ-Pb-yeC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gb1-jk-gI3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="236" y="189"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="back.png" width="16" height="26"/>
+        <image name="calenarwhite.png" width="29" height="29"/>
+    </resources>
 </document>
